--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,11 @@ Title: vancity home-buying visual guide
 Version: 0.0.0.9000
 Authors@R: person("Amin", "Adibi", email = "maadibi@mail.ubc.ca", role = c("aut", "cre"))
 Description: This package helps you identify most desirable locations for your future home in Vancouver. 
-Depends: R (>= 3.4.1)
+Depends: R (>= 3.4.1),
+ggplot2,
+dplyr,
+cancensus
 License: GNU
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
